<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:descendantFocusability="blocksDescendants"
    android:orientation="vertical">

    <include layout="@layout/layout_banner" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="15dp"
        android:paddingTop="5dp">

        <TextView
            android:id="@+id/id_new_game"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="7dp"
            android:drawableTop="@drawable/icon_xinyou"
            android:gravity="center"
            android:text="@string/newGame"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/id_manv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="7dp"
            android:drawableTop="@drawable/icon_manv"
            android:gravity="center"
            android:text="@string/fullV"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/id_huodong"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="7dp"
            android:drawableTop="@drawable/ic_paihangbang"
            android:gravity="center"
            android:text="@string/activity"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/id_fenlei"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="7dp"
            android:drawableTop="@drawable/icon_fenlei"
            android:gravity="center"
            android:text="@string/classify"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/line0"></View>

</LinearLayout>