<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <include layout="@layout/common_title_bar" />

    <com.tenone.gamebox.view.custom.CustomizeEditText
        android:id="@+id/id_modification_oldPwd"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/border_bottom"
        android:drawableLeft="@drawable/ic_pwd"
        android:drawablePadding="5dp"
        android:hint="@string/oldPwd"
        android:inputType="textPassword"
        android:textColorHint="@color/hintColor"
        android:textSize="12sp" 
        android:padding="10dp"/>

    <com.tenone.gamebox.view.custom.CustomizeEditText
        android:id="@+id/id_modification_newPwd"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/border_bottom"
        android:drawableLeft="@drawable/ic_pwd"
        android:drawablePadding="5dp"
        android:hint="@string/newPwd"
        android:inputType="textPassword"
        android:textColorHint="@color/hintColor"
        android:textSize="12sp"
        android:padding="10dp" />

    <com.tenone.gamebox.view.custom.CustomizeEditText
        android:id="@+id/id_modification_confirmPwd"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/border_bottom"
        android:drawableLeft="@drawable/ic_pwd"
        android:drawablePadding="5dp"
        android:hint="@string/confirmPwd"
        android:inputType="textPassword"
        android:textColorHint="@color/hintColor"
        android:textSize="12sp"
        android:padding="10dp" />

    <Button
        android:id="@+id/id_modification_modificationBt"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/shape_red_new"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="14sp" />

</LinearLayout>