<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/id_item_detailsOpen_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:paddingBottom="17dp"
    android:paddingTop="17dp">

    <TextView
        android:id="@+id/id_item_detailsOpen_nameTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="服务器名称"
        android:textColor="@color/gray_69"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/id_item_detailsOpen_timeTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_item_detailsOpen_nameTv"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="18dp"
        android:drawableLeft="@drawable/icon_dian_kf"
        android:drawablePadding="10dp"
        android:textColor="@color/gray_69"
        android:textSize="13sp" />

    <com.tenone.gamebox.view.custom.ThreeStateButton
        android:id="@+id/id_item_detailsOpen_button"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:textSize="12sp"
        app:defultColor_ThreeStateButton="@color/blue_40"
        app:defultDrawable_ThreeStateButton="@drawable/radiu_progressbar"
        app:defultText_ThreeStateButton="@string/remindMe"
        app:otherColor_ThreeStateButton="@color/white"
        app:otherDrawable_ThreeStateButton="@drawable/radiu_shape_full"
        app:otherText_ThreeStateButton="@string/cancleRemind"
        app:threeColor_ThreeStateButton="@color/white"
        app:threeDrawable_ThreeStateButton="@drawable/shape_getcode_gray"
        app:threeText_ThreeStateButton="@string/alreadyOpen" />

</RelativeLayout>