<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/common_title_bar" />

    <com.tenone.gamebox.view.custom.CustomizeEditText
        android:id="@+id/id_findPwd_account"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/border_bottom"
        android:drawableLeft="@drawable/ic_account"
        android:drawablePadding="8dp"
        android:hint="@string/inputPhoneHint"
        android:padding="10dp"
        android:textColorHint="@color/hintColor"
        android:textSize="12sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/border_bottom"
        android:orientation="horizontal"
        android:padding="1dp">

        <TextView
            android:id="@+id/id_findPwd_sendCodeBt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@color/white"
            android:gravity="center"
            android:paddingBottom="11dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="11dp"
            android:text="@string/getCode"
            android:textColor="#eb2202"
            android:textSize="14sp" />

        <com.tenone.gamebox.view.custom.CustomizeEditText
            android:id="@+id/id_findPwd_code"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="9dp"
            android:layout_toLeftOf="@id/id_findPwd_sendCodeBt"
            android:background="@color/white"
            android:drawableLeft="@drawable/ic_code"
            android:drawablePadding="8dp"
            android:hint="@string/inputCodeHint"
            android:inputType="phone"
            android:padding="10dp"
            android:textColorHint="@color/hintColor"
            android:textSize="12sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/id_findPwd_nextBt"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/shape_red_new"
        android:gravity="center"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="14sp" />

</LinearLayout>